fixed alignment issues

--- a/Styles/style.css
+++ b/Styles/style.css
@@ -39,28 +39,26 @@
 
 .banner{
     margin: 20px 160px;
-    padding-left: 30px;
-    padding-top: 100px;
+    padding-left: 50px;
+    padding-top: 80px;
+    padding-bottom: 80px;
     width: auto;
-    height: 360px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 20px;
+    height: 310px;
+    align-items: left;
     background-color: #C6E4D6;
     border-radius: 16px;
-    background-position-y: 100px;
-/*
     background-image: url(./assets/hero.png);
     background-repeat: no-repeat;
-    background-position: right;*/
-   
+    background-position-x: 690px ;
+    background-position-y: 80px;
+    background-size: 350px 300px;
     
 }
 
 .subtext{
     background-color: #C6E4D6;
     font-weight: 600;
+    font-family: Fira Sans;
     color: #0E0E0E;
     opacity: 0.6;
     margin-bottom: 12px;
@@ -70,10 +68,13 @@
 
 .maintext{
     background-color: #C6E4D6;
-    width: 380px;
-    font-size: 33px;
+    color: rgb(14, 14, 14);
+    font-family: Fira Sans;
+    font-size: 56px;
     font-weight: 700;
+    line-height: 67px;
     margin-bottom: 20px;
+    width: 600px;
    
 }
 
@@ -86,28 +87,26 @@
     border-radius: 5px;
     font-size: 18px;
     font-weight: 600;
+    font-family: Fira Sans;
 
 }
 
-
+/*
 .banner img{
     width: 374px;
     height: 300px;
     background-color: #C6E4D6;
     margin-right: 50px;
 
-}
+}*/
 
-.banner-text{
-    background-color: #C6E4D6;
-  
-}
+
 
 .pillars-content{
     display: flex;
     flex-direction: column;
     gap: 25px;
-    margin: 31px 160px;
+    margin: 70px 160px;
 }
 
 .pillars-content h1{
@@ -168,7 +167,7 @@
     display: flex;
     flex-direction: column;
     gap: 25px;
-    margin: 31px 160px;
+    margin: 3px 160px;
 }
 
 .vision-content h1{
@@ -177,7 +176,7 @@
     font-size: 40px;
     font-weight: 700;
     line-height: 48px;
-    margin-top: 80px;    
+    
 }
 
 .vision-content p{
@@ -575,6 +574,10 @@
     padding: 30px;
 }
 
+.amount-tk:hover{
+    background: rgb(198, 228, 214);
+}
+
 .amount-tk p{
     background-color: white;
     color: rgba(14, 14, 14, 0.8);
@@ -585,6 +588,10 @@
     font-weight: 700;
     line-height: 48px;
     
+}
+
+.amount-tk p:hover{
+    background: rgb(198, 228, 214);
 }
 
 .amount-tk2{
@@ -703,6 +710,7 @@ footer hr{
     border: 1px solid rgba(14, 14, 14, 0.1);
     height: 0;
     width: 80%;
+    opacity: .2;
 
 
 }
